feat: implement Clerk webhooks for user management and update user model

--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,2 @@
-MONGODB_URI= 'mongodb+srv://barshap674_db_user:9cWHW5dJpYkBXur9@cluster0.pi9kbyc.mongodb.net'
+MONGODB_URI=mongodb+srv://barshap674_db_user:9cWHW5dJpYkBXur9@cluster0.pi9kbyc.mongodb.net/bg-removal
+CLERK_WEBHOOK_SECRET= whsec_qZKZzbJz2d4Irn+CV/vZySyS6I77PmE4
