--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,6 @@
     "mongoose": "^8.19.2",
     "multer": "^2.0.2",
     "nodemon": "^3.1.10",
-    "svi": "^0.0.3"
+    "svix": "^1.79.0"
   }
 }
